Test on mobile, css fixes

--- a/css/labs.css
+++ b/css/labs.css
@@ -8,6 +8,7 @@
 	overflow: hidden;
 	
 	margin-left: 1em;
+	margin-right: 1em;
 	text-align: justify;
 }
 
